# viktorsgame-rs

./: .gitignore  cargo.toml
bevy_web_client/: Cargo.toml
bevy_web_client/src/: lib.rs
bevy_web_server/: Cargo.toml
bevy_web_server/src/: lib.rs
bevy_webclient/: Cargo.toml
bevy_webclient/src/: lib.rs
bevy_webserver/: Cargo.toml
bevy_webserver/src/: lib.rs
client/: Cargo.toml
client/src/: components.rs  lib.rs  resources.rs  systems.rs
core/: Cargo.toml
main/: Cargo.toml
main/src/: main.rs
server/: Cargo.toml
server/src/: bundles.rs  lib.rs  misc.rs  resources.rs  systems.rs
shared/: Cargo.toml
shared/src/: components.rs  lib.rs  message.rs  snapshot.rs
