[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = {path = "../shared"}
bevy_webserver = {path = "../bevy_webserver"}
bevy = {workspace = true}
serde = {workspace = true}
